--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -1,4 +1,4 @@
-html[class="dark"] .sidebarWrapper {
+html[class*="dark"] .sidebarWrapper {
   background-color: var(--taskward-theme-color-darkest);
 }
 
